data/derived/comb/progs/unify/prog7280.ml.out
Characters 124-125:
  | _  -> [(h*i)/10]@mulByDigit i ([t.hd+((i*t.hd) mod 10)]@t.tl);;
            ^
Error: This expression has type 'a list
       but an expression was expected of type int
